# echo-tui

./: .gitignore  Cargo.toml
.sqlx/: query-0bc705e2b94cd8cc162c0a6167288ba0aa957277c5df31a07b31bd4b46af6604.json  query-958d04df2bd0724aedc2f08bfcc9fec94f73f66668b8c0e6c9320a593d8680e3.json
migrations/: 202603290000_init_playlists.sql
src/: app.rs  awdio.rs  config.rs  db.rs  download.rs  event.rs  ignite.rs  logger.rs  main.rs  result.rs  ui.rs
src/awdio/: metadata.rs  mod.rs  song.rs
src/db/: library.rs  mod.rs
src/event/: echo.rs
src/event/echo/: main_events.rs  sub_events.rs
src/ui/: actions.rs  canvas.rs  components.rs  event.rs  layout.rs  mod.rs  temp.rs
src/ui/components/: mod.rs
src/ui/components/shared/: block.rs  mod.rs  paragraph.rs  tab.rs  table.rs
src/ui/components/tabs/: echo.rs
