[package]
name = "echo-tui"
version = "0.1.0"
edition = "2024"

[alias]
fmt = "fmt"
lint = "clippy --all-targets --all-features -- -D warnings"
precommit = "fmt && clippy --all-targets --all-features -- -D warnings"

[dependencies]
ratatui = { version = "0.29.0", features = ["all-widgets"] }
crossterm = "0.28.1"
tokio = { version = "1.48.0", features = ["full"] }
directories = "6.0.0"
toml = "0.9.8"
cpal = "=0.16.0"
serde = { version = "1.0.228", features = ["derive"]}
strum = { version = "0.27", features = ["derive"] }
rand = "0.9.2"
symphonia = {version = "0.5.5", features = ["all-codecs"]}
rustfft = "6.4.1"
chrono = "0.4.42"
audiotags = "=0.5.0"
thiserror = "1.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
tracing-appender = "0.2.4"
